# task-hub-2090

./: .env.example  .gitignore  LICENSE  PROMPT.md  README.md  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/app/: __init__.py  healthcheck.py  main.py  scheduler.py  seed.py  worker.py
backend/app/api/: deps.py  presenters.py  routes.py
backend/app/cli/: __init__.py  create_admin.py
backend/app/core/: clock.py  config.py  errors.py  ratelimit.py  security.py
backend/app/db/: base.py  session.py
backend/app/domain/: enums.py  invariants.py  overdue.py  permissions.py  roles.py  status.py
backend/app/models/: __init__.py  models.py
backend/app/notifications/: channel.py  email.py  max.py  registry.py
backend/app/realtime/: __init__.py  manager.py
backend/app/repositories/: handover_repo.py  messages_repo.py  notifications_repo.py  outbox_repo.py  registry_repo.py  tasks_repo.py  tokens_repo.py  users_repo.py
backend/app/schemas/: admin.py  auth.py  chat.py  common.py  notifications.py  profile.py  reports.py  tasks.py
backend/app/services/: attachment_service.py  auth_service.py  chat_service.py  export_service.py  notification_center.py  notification_service.py  profile_service.py  registry_service.py  report_service.py  task_service.py
backend/app/storage/: base.py
backend/app/templates/: print.html.j2
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_admin_handover.py  0005_user_avatar.py  (+2 more)
backend/tests/: conftest.py  factories.py  fakes.py
(+93 files in other folders)
