[project]
name = "task-hub-2090-backend"
version = "1.0.0"
description = "Система постановки поручений и контроля за их исполнением — школа № 2090 (backend)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi==0.137.0",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy[asyncio]==2.0.36",
    "asyncpg==0.30.0",
    "alembic==1.14.0",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.1",
    "email-validator==2.2.0",
    "PyJWT==2.13.0",
    "argon2-cffi==23.1.0",
    "python-multipart==0.0.27",
    "aiosmtplib==3.0.2",
    "httpx==0.28.1",
    "jinja2==3.1.6",
    "greenlet==3.1.1",
    "APScheduler==3.11.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
    "ruff==0.8.4",
    "mypy==1.14.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]  # FastAPI Depends() in defaults is idiomatic

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
plugins = []
